--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=veterinaria
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=${DB_URL}
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost/vet_clinic?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
 server.port=8080
